# RagApp

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
docker/: docker-compose.yml  docker_cleanup.sh
src/: .env  .env.example  main.py  pyproject.toml  requirements.txt
src/controllers/: BaseController.py  DataController.py  ProcessController.py  ProjectController.py
src/helpers/: __init__.py  config.py
src/models/: AssetModel.py  ChunkModel.py  ProjectModel.py  __init__.py
src/models/db_schemes/: __init__.py  asset.py  db_chunks.py  project.py
src/models/enums/: DataBaseEnum.py  ResponseEnums.py
src/routes/: base.py  data.py
src/routes/schemes/: data.py
src/stores/llm/: LLMEnums.py  LLMInterface.py  LLMProviderFactory.py
src/stores/llm/providers/: CohereProvider.py  OpenAIProvider.py
